Prevented re-wrapping text when Smarti highlighting occurs (#577)

--- a/packages/assistify-ai/client/public/stylesheets/smarti.css
+++ b/packages/assistify-ai/client/public/stylesheets/smarti.css
@@ -150,9 +150,7 @@
 	border-bottom: 1px dashed;
 }
 
-.recognized-term::after {
-	content: "\2197";
-	vertical-align: super;
-
-	font-size: 60%;
+.recognized-term .text:hover {
+	color: #006b61;
+	border-style: solid;
 }
